--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<p id="nav">
 				<span><a href="index.html">首页</a></span>
 				<span><a href="blog.html">文章</a></span>
-				<span><a>作品</a></span>
-				<span><a>关于</a></span>
+				<span><a href="gallery.html">作品</a></span>
+				<span><a href="about.html">关于</a></span>
 			<p>
 
 			<div id="github-top">
@@ -24,7 +24,7 @@
 		</header>
 
 		<div id="banner">
-			<img src="img/bridge.jpg">
+			<img src="img/bridge3.jpg">
 		</div>	
 
 
