完成四个页面的基本搭建

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Jerrywong</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="blog.css">
+              <link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/blog.css">
 	</head>
 
 	<body>
@@ -13,10 +14,10 @@
 				<img src="img/logo.png" alt="Jerrywong">
 			</div>
 			<p id="nav">
-				<span><a href="index.html">首页</a></span>
-				<span><a href="blog.html">文章</a></span>
-				<span><a href="gallery.html">作品</a></span>
-				<span><a href="about.html">关于</a></span>
+				<span><a class="innerlink" href="index.html">首页</a></span>
+                            <span><a class="innerlink" href="blog.html">文章</a></span>
+                            <span><a class="innerlink" href="gallery.html">作品</a></span>
+                            <span><a class="innerlink" href="about.html">关于</a></span>
 			<p>
 
 			<div id="github-top">
@@ -218,11 +219,11 @@
 		 <footer>
         	<div id="line"></div>
         	<p id="navbottom">
-				<span><a>首页</a></span>
-				<span><a>文章</a></span>
-				<span><a>作品</a></span>
-				<span><a>关于</a></span>
-			</p>
+                            <span><a class="innerlink" href="index.html">首页</a></span>
+                            <span><a class="innerlink" href="blog.html">文章</a></span>
+                            <span><a class="innerlink" href="gallery.html">作品</a></span>
+                            <span><a class="innerlink" href="about.html">关于</a></span>
+                     </p>
 			<p id="bottomlink">
 				<span class="first"><a>学习资料</a></span>
 				<span><a>友情链接</a></span>
