--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Jerrywong</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/about.css">
 	</head>
 
 	<body>
@@ -11,12 +12,12 @@
 		<header>
     		<div id="logo">
 				<img src="img/logo.png" alt="Jerrywong">
-			</div>
-			<p id="nav">
-				<span><a href="index.html">首页</a></span>
-				<span><a href="blog.html">文章</a></span>
-				<span><a href="gallery.html">作品</a></span>
-				<span><a href="about.html">关于</a></span>
+			</div>       
+			<p id="nav">	
+				<span><a class="innerlink" href="index.html">首页</a></span>
+        <span><a class="innerlink" href="blog.html">文章</a></span>
+        <span><a class="innerlink" href="gallery.html">作品</a></span>
+        <span><a class="innerlink" href="about.html">关于</a></span>
 			<p>
 
 			<div id="github-top">
@@ -116,11 +117,11 @@
         <footer>
         	<div id="line"></div>
         	<p id="navbottom">
-				<span><a>首页</a></span>
-				<span><a>文章</a></span>
-				<span><a>作品</a></span>
-				<span><a>关于</a></span>
-			</p>
+        <span><a class="innerlink" href="index.html">首页</a></span>
+        <span><a class="innerlink" href="blog.html">文章</a></span>
+        <span><a class="innerlink" href="gallery.html">作品</a></span>
+        <span><a class="innerlink" href="about.html">关于</a></span>
+      </p>
 			<p id="bottomlink">
 				<span class="first"><a>学习资料</a></span>
 				<span><a>友情链接</a></span>
