--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-	<head>
+	<head lang="zh-CN">
 		<title>Jerrywong</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/index.css">
 	</head>
-
 	<body>
 		<header>
     		<div id="logo">
@@ -17,37 +16,35 @@
 				<span><a class="innerlink" href="blog.html">文章</a></span>
 				<span><a class="innerlink" href="gallery.html">作品</a></span>
 				<span><a class="innerlink" href="about.html">关于</a></span>
-			<p>
+			</p>
 			<div id="github-top">
-				<img src="img/icon-github.png">
+				<a href="https://github.com/JerryWong1996"><img src="img/icon-github.png"></a>
 			</div>
 		</header>
-
 		<div id="banner">
 			<img src="img/bridge3.jpg">
 		</div>	
-
 		<div id="main">
 			<div id="section1">
 				<img src="img/buliding.jpg" id="buliding">
 				<p>  这里是正文，这里是正文，这里是正文，
 				这里是正文，这里是正文，这里是正文，这里是正文，
 				这里是正文，这里是正文，这里是正文，这里是正文。
-				<p>
+				</p>
 			</div>
 			<div id="section2">
 				<img src="img/street.jpg" id="buliding">
 				<p>  这里是正文，这里是正文，这里是正文，
 				这里是正文，这里是正文，这里是正文，这里是正文，
 				这里是正文，这里是正文，这里是正文，这里是正文。
-				<p>
+				</p>
 			</div>
 			<div id="section3">
 				<img src="img/museum.jpg" id="buliding">
 				<p>  这里是正文，这里是正文，这里是正文，
 				这里是正文，这里是正文，这里是正文，这里是正文，
 				这里是正文，这里是正文，这里是正文，这里是正文。
-				<p>
+				</p>
 			</div>
 		</div>
 
@@ -64,11 +61,7 @@
 				这是一段长长的自我介绍，这是一段长长的自我介绍。
 				</p>
 			</div>
-		</div>    
-			
-		
-		
-		
+		</div>    		
 		<footer>
         	<div id="line"></div>
         	<p id="navbottom">
@@ -84,41 +77,39 @@
 				<span><a>友情链接</a></span>
 				<span><a>学习资料</a></span>
 			</p>
-
 			<p id="bottomlinkenglish">
-				<span class="first"><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
+				<span class="first"><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
 				<br>
-				<span class="first"><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
+				<span class="first"><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
 				<br>
-				<span class="first"><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
+				<span class="first"><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
 				<br>
-				<span class="first"><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
+				<span class="first"><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
 				<br>
-				<span class="first"><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
-				<span><a>LINK</a></span>
+				<span class="first"><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
+				<span><a href="index.html">LINK</a></span>
 			</p>
 			<div id="githubbottom">
-				 <p>版权信息</p>
-				 
+				 <p>版权信息</p>				 
 				<img src="img/icon-github.png">
 			</div>
 		</footer>
