全部页面基本搭建完成

--- a/gallery.html
+++ b/gallery.html
@@ -25,11 +25,11 @@
              <div id="bd">        
                 <div class="main">
                     <div class="top">
-                        <div><p><a href="gallery.html">All</a></p></div>
-                        <div><p><a href="gallery.html">JavaScript Util Functions</a></p></div>
-                        <div><p><a href="gallery.html">UI Components</a></p></div>
-                        <div><p><a href="gallery.html">Framework</a></p></div>
-                        <div><p><a href="gallery.html">Applocations</a></p></div>
+                        <div><a href="gallery.html">All</a></div>
+                        <div><a href="gallery.html">JavaScript Util Functions</a></div>
+                        <div><a href="gallery.html">UI Components</a></div>
+                        <div><a href="gallery.html">Framework</a></div>
+                        <div><a href="gallery.html">Applocations</a></div>
                     </div>
                     <div class="middle">                        
                         <div class="content1">
@@ -52,7 +52,7 @@
                                 </div>     
                                 <div class="part2">                        
                                     <h1>这里是标题</h1>            
-                                    <p>这里是内容啊内容啊内容啊内容啊</p             
+                                    <p>这里是内容啊内容啊内容啊内容啊</p>          
                                 </div>
                             </div>          
                         </div>                                   
