--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
 		</header>
 		<div id="banner">
 			<img src="img/bridge3.jpg">
+
 		</div>	
+		<div id="textbox">
+			<h1>这里是标题</h1>
+			<p>这里是正文,这里是正文,这里是正文,这里是正文,这里是正文,这里是正文,这里是正文,这里是正文。</p>
+
+		</div>
 		<div id="main">
 			<div id="section1">
 				<img src="img/buliding.jpg" id="buliding">
