--- a/about.html
+++ b/about.html
@@ -3,16 +3,16 @@
 	<head>
 		<title>Jerrywong</title>
 		<meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/about.css">
 	</head>
 	<body>	  
 		<header>
     		<div id="logo">
-				<img src="img/logo.png" alt="Jerrywong">
+				<a href="index.html"><img src="img/logo.png" alt="Jerrywong"></a>
 			</div>       
 			<p id="nav">	
-			     <span><a class="innerlink" href="index.html">首页</a></span>
+			    <span><a class="innerlink" href="index.html">首页</a></span>
                 <span><a class="innerlink" href="blog.html">文章</a></span>
                 <span><a class="innerlink" href="gallery.html">作品</a></span>
                 <span><a class="innerlink" href="about.html">关于</a></span>
